# pb-nats-rs

./: Cargo.toml  README.md
src/: atlas.rs  lib.rs  main.rs  rpc.rs
src/pb/: mod.rs  rpc.proto  rpc.rs  warehouse.proto  warehouse.rs
