[package]
name = "pb-nats-rs"
version = "0.1.0"
authors = ["Garrett Thornburg <film42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pb-nats-rs-tester"
path = "src/main.rs"

[dependencies]
rants = "0.4"
futures = "0.3"
tokio = "0.2"
uuid = { version = "0.8", features = ["v4"]}
failure = "0.1"
protoc-rust = "2.0"
protobuf = "2.8"
# async-trait = "*"
tower = "0.3"
# futures-util = "*"
